methods.picture.PatternPicture.scala.error
Erreur de compilation :
PatternPicture:5: error: ')' expected but ';' found.
  pattern(Color.RED, Color.BLUE, Color.GREEN, Color;YELLOW)
                                                   ^PatternPicture:5: error: ';' expected but ')' found.
  pattern(Color.RED, Color.BLUE, Color.GREEN, Color;YELLOW)
                                                          ^PatternPicture:9: error: ';' expected but ')' found.
  pattern(Color.RED, Color.BLUE, Color.GREEN, Color;YELLOW)
                                                          ^PatternPicture:13: error: ';' expected but ')' found.
  pattern(Color.RED, Color.BLUE, Color.GREEN, Color;YELLOW)
                                                          ^PatternPicture:17: error: ';' expected but ')' found.
  pattern(Color.RED, Color.BLUE, Color.GREEN, Color;YELLOW)
                                                          ^